--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -5,6 +5,7 @@
   overflow: auto;
   padding: 16px 0;
   flex-direction: column;
+  border-right: 1px solid rgba(#000, .08);
   background: #FFF;
 
   &__item {
@@ -13,6 +14,11 @@
     align-items: center;
     text-decoration: none;
     color: #333;
+    transition: background-color .2s;
+
+    &:hover {
+      background: rgba(#000, .05);
+    }
 
     &.active {
       background: rgba(#000, .1);
@@ -32,6 +38,18 @@
 
     .Menu__item.active & {
       color: #44c1cf;
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .Menu {
+    position: fixed;
+    left: -240px;
+    transition: left .2s;
+
+    &.-open {
+      left: 0;
     }
   }
 }
