--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,7 @@ body {
 }
 
 body, input, button {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
 @import './App';
