--- a/src/pages/Publications/Publications.scss
+++ b/src/pages/Publications/Publications.scss
@@ -1,6 +1,117 @@
 .Publications {
+  display: flex;
   height: 100%;
-  padding: 32px;
   flex: 1;
-  overflow: auto;
+  align-items: center;
+  overflow: hidden;
+
+  &__spinner {
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+    font-size: 24px;
+    color: #333;
+  }
+
+  &__table-wrapper {
+    margin: 32px;
+    height: calc(100% - 64px);
+    border: 1px solid rgba(#000, .1);
+    border-radius: 4px;
+    flex: 1;
+    overflow: auto;
+    background: #FFF;
+  }
+
+  &__table {
+    width: 100%;
+    border-collapse: collapse;
+    text-align: left;
+    color: #333;
+
+    tr {
+      border-bottom: 1px solid rgba(#000, .08);
+    }
+
+    td, th {
+      width: calc(100% / 3);
+      padding: 16px;
+    }
+
+    th {
+      font-weight: 500;
+    }
+
+    tbody tr {
+      cursor: pointer;
+
+      &:hover {
+        background: rgba(#000, .05);
+      }
+
+      &:last-of-type {
+        border-bottom: 0;
+      }
+    }
+  }
+
+  &__detail {
+    width: 320px;
+    height: 100%;
+    padding: 0 8px;
+    margin-right: -320px;
+    overflow: auto;
+    background: #FFF;
+    border-left: 1px solid rgba(#000, .1);
+    transition: margin-right .2s;
+
+    &.-selected {
+      margin-right: 0;
+    }
+  }
+
+  &__detail-header {
+    display: flex;
+    height: 56px;
+    align-items: center;
+  }
+
+  &__detail-close {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    margin-right: 16px;
+    border: 0;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    background: transparent;
+    color: #333;
+    cursor: pointer;
+
+    &:hover {
+      background: rgba(#000, .1);
+    }
+
+    &:active {
+      background: rgba(#000, .2);
+    }
+  }
+
+  &__detail-title {
+    padding: 0 16px;
+    font-weight: 500;
+  }
+
+  &__detail-body, &__detail-author {
+    padding: 8px 16px;
+    font-weight: 300;
+
+    b {
+      font-weight: 500;
+    }
+  }
 }
