--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,12 +1,14 @@
 .Menu {
-  display: flex;
-  width: 240px;
-  height: 100%;
-  overflow: auto;
-  padding: 16px 0;
-  flex-direction: column;
-  border-right: 1px solid rgba(#000, .08);
-  background: #FFF;
+  &__list {
+    display: flex;
+    width: 240px;
+    height: 100%;
+    overflow: auto;
+    padding: 16px 0;
+    flex-direction: column;
+    border-right: 1px solid rgba(#000, .08);
+    background: #FFF;
+  }
 
   &__item {
     display: flex;
@@ -44,12 +46,33 @@
 
 @media (max-width: 1200px) {
   .Menu {
-    position: fixed;
-    left: -240px;
-    transition: left .2s;
+    z-index: 1;
+    &__list {
+      position: fixed;
+      left: -240px;
+      transition: left .2s;
 
-    &.-open {
+      .-open & {
+        left: 0;
+      }
+    }
+
+    &__mobile-background {
+      position: absolute;
+      top: 56px;
       left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(#000, .5);
+      visibility: hidden;
+      opacity: 0;
+      transition: opacity .2s, visibility .2s;
+
+      .-open & {
+        visibility: visible;
+        opacity: 1;
+        left: 0;
+      }
     }
   }
 }
